--- a/police/client/html/index.html
+++ b/police/client/html/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<script src="nui://game/ui/jquery.js" type="text/javascript"></script>
-	<link rel="stylesheet" href="style.css" type="text/css">
+	<link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 
 <body>
@@ -14,12 +14,13 @@
 				<div class="content">
 					<ul class="list">
 					</ul>
+					<div class="scroll">&nbsp;</div>
 				</div>
 			</div>
 		</div>
 	</div>
 </body>
 
-<script src="script.js" type="text/javascript"></script>
+<script src="js/script.js" type="text/javascript"></script>
 
 </html>
