--- a/police/client/html/index.html
+++ b/police/client/html/index.html
@@ -1,26 +1,24 @@
 <html>
 <head>
-	<script src="nui://game/ui/jquery.js" type="text/javascript"></script>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	
 	<link rel="stylesheet" href="css/style.css" type="text/css">
+	<script src="nui://game/ui/jquery.js" type="text/javascript"></script>
+	<script src="js/script.js" type="text/javascript"></script>
 </head>
 
 <body>
-	<div class='outer-div'>
-		<div class='middle-div'>
-			<div class='menu'>
-				<div class="header">
-				</div>
+	<div class='menu'>
+		<div class="header"></div>
+		<div class="subheader"></div>
+		<div class="content">
+			<ul id="selected" class="list">
 				
-				<div class="content">
-					<ul class="list">
-					</ul>
-					<div class="scroll">&nbsp;</div>
-				</div>
-			</div>
+			</ul>
 		</div>
+
+		<div class="scroll">&nbsp;</div>
 	</div>
 </body>
-
-<script src="js/script.js" type="text/javascript"></script>
-
 </html>
